--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "name": "pipedrive",
   "version": "1.0.0",
   "description": "test task",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/server.js"
+    "start": "node api/index.js"
   },
   "author": "",
   "license": "ISC"
